bin_PROGRAMS = CSE_571S

CSE_571S_SOURCES = main.cpp 
CSE_571S_CPPFLAGS = -I$(top_srcdir)/include
#gill_work_CPPFLAGS = $(APR_CFLAGS) $(APR_UTIL_CFLAGS) -I$(top_srcdir)/include 
#gill_work_LDADD = $(APR_LIBS) $(APR_UTIL_LIBS) $(top_srcdir)/libs/libjson/libgillJson.la $(top_srcdir)/libs/libevents/libgillEvents.la

